--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,26 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds</title>
-</head>
-
-<body>
     <h1>All campgrounds</h1>
-    <div>
-        <a href="/campgrounds/new">Add campground</a>
-    </div>
     <ul>
         <% for (let campground of campgrounds) { %>
-            <li>
-               <a href="/campgrounds/<%=campground.id %>"><%= campground.title %></a> 
-            </li>
-        <% } %>
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="img-fluid" src="<%= campground.image %>" alt="">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <%= campground.title %>
+                            </h5>
+                            <p class="card-text">
+                                <%= campground.description %>
+                            </p>
+                            <p class="card-text"><small class="text-muted">
+                                    <%= campground.location %>
+                                </small></p>
+                            <a class="btn btn-primary" href="/campgrounds/<%= campground._id %> ">View <%=
+                                    campground.title %> </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <% } %>
     </ul>
-
-</body>
-
-</html>
