Implemented Session and Flash

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,9 +12,10 @@
 
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
-
-        <main class="container mt-5">
-            <%- body %>
+    
+    <main class="container mt-5">
+        <%- include('../partials/flash') %>
+        <%- body %>
         </main>
 
         <%- include('../partials/footer') %>
