--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,15 @@
                 <a class="nav-link" href="/campgrounds">Campgrounds</a>
                 <a class="nav-link" href="/campgrounds/new">Add campground</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                <% if (!currentUser) { %>
+                    <a href="/login" class="nav-link">Login</a>
+                    <a href="/register" class="nav-link">Sign up</a>
+                    <% } else { %>
+
+                        <a href="/logout" class="nav-link">Logout</a>
+                        <% } %>
+            </div>
         </div>
     </div>
 </nav>
